baseline/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: default
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30001
